# yapoweremu

./: .gitignore  LICENSE  README.md  get_params.ipynb  pyproject.toml  run_camb.py  setup.py
yapoweremu/: __init__.py  k.txt  param_ranges.txt  pk_nonu.pt  pk_tot.pt  regularize_nonu.npy  regularize_tot.npy  yapoweremu.py
